2011-08-13  Robert Larice
 * src/ciderlib/twod/twoprint.c :
   twoprint.c, swallow warnings

2011-08-13  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
 * src/spicelib/parser/inpptree-parser.c ,
 * src/spicelib/parser/inpptree-parser.h :
   update bison generated files

2011-08-13  Robert Larice
 * src/frontend/parse-bison.y ,
 * src/spicelib/parser/inpptree-parser.y :
   bison files, swallow warnings

2011-08-12  Robert Larice
 * src/spicelib/devices/adms/admst/ngspice.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml :
   adms, fix parallel execution when using make -j

2011-08-12  Robert Larice
 * src/spicelib/devices/adms/admst/ngspiceMODULEask.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEguesstopology.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEload.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEmask.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEpar.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEpzld.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEtemp.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml :
   pull two -adms3 fixes into -adms
     2011-07-25
       convert K&R function definitions to ansi style
       and declare a debug function `static'
     2011-07-26
       swallow unsed variable warnings in adms generated code,
       upgrade dependencies

2011-08-12  Robert Larice
 * src/frontend/plotting/Makefile.am ,
 * src/frontend/plotting/grid.c ,
 * src/frontend/plotting/grid.h ,
 * src/include/grid.h ,
 * visualc/vngspice.vcproj :
   remove second incarnation of `grid.h'

2011-08-11 Holger Vogt
 * xpressn.c: correct #include path for error.h

2011-08-10 Holger Vogt
 * evtplot.c: initilize 'value' to 0
 * xpressn.c: improved error message
 * misccoms.c, main.c, error.c, fteext.h: flag ft_pipemode set
   in main.c, used to optimize or suppress output messages

2011-08-09 Holger Vogt
 * inp2dot.c: align spaces and braces