@@ -1,3 +1,8 @@
+2011-08-14  Paolo Nenzi
+ * src/frontend/devices.c :
+   devhelp now prints header when user asks for a single
+   parameter.
+
 2011-08-13  Robert Larice
  * src/ciderlib/twod/twoprint.c :
    twoprint.c, swallow warnings
